<resources>
    <string name="app_name">TaskieApp</string>
    <string name="welcome_image_content_description">Imagen de Bienvenida</string>
    <string name="welcome_title">Bienvenid@ a</string>
    <string name="message_welcome">Explora la aplicación. ¡Hagamos una lista con Taskie!</string>
    <string name="text_register">Regístrate</string>
    <string name="text_login">¿YA TIENES UNA CUENTA?</string>
    <string name="log_in">Ingresar</string>
    <string name="back_button_content_description">Botón para regresar a la pantalla de inicio</string>
    <string name="welcome_again_title">¡Bienvenido de nuevo!</string>
    <string name="user_password">Contraseña</string>
    <string name="user_email_address">Correo electrónico</string>
    <string name="save_user">Guardar sesión</string>
    <string name="home_title">Home</string>
    <string name="button_exit">Cerrar Sesión</string>
    <string name="welcome_title_register">¡Hola! Regístrate para empezar</string>
    <string name="user_name">Nombre</string>
    <string name="text_start">Empezar</string>
    <string name="add_button_content_description">Botón para agregar una nota</string>
    <string name="drop_down_menu_button_content_description">Botón para desplegar el menú</string>
    <string name="note_title_card_view">Titulo</string>
    <string name="note_description_card_view">Descripción</string>
    <string name="more_button_content_description">Botón para </string>


    <!-- Form validation errors -->
    <string name="form_error_empty_email">Correo electrónico requerido</string>
    <string name="form_error_invalid_email">Por favor ingrese un correo electrónico válido</string>
    <string name="form_error_empty_password">Contraseña requerida</string>
    <string name="form_error_password_length">La contraseña es demasiado corta, ingrese más de 5 caracteres</string>
    <string name="form_error_invalid_password">La contraseña no es válida</string>
    <string name="user_successfully_created">Tus datos fueron registrados correctamente</string>
    <string name="unsuccessful_user_created">No se registraron los datos</string>
    <string name="user_successful_login">Inicio de sesión correcto</string>
    <string name="saved_session">Sesión guardada</string>
    <string name="user_failed_login">Ocurrió un error en el inicio de sesión</string>
    <string name="email_sent">Se envío un correo de verificación</string>
    <string name="log_out">Sesión cerrada</string>
    <string name="textview">Demo</string>
    <string name="add_note">Agrega una nota</string>
    <string name="title_note_dialog">Título</string>
    <string name="content_note_in_dialog">Empiece a escribir su nota...</string>
    <string name="message_dialog_ok">Se agregó la nota con éxito</string>
    <string name="message_dialog_cancel">Nota cancelada</string>
    <string name="priority_high">Alta</string>
    <string name="priority_medium">Media</string>
    <string name="priority_low">Baja</string>
    <string name="delete_note">Eliminar nota</string>

</resources>