<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".templatemvvm.ui.onboarding.OnBoardingActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/rubik_light"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/welcome_title"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textWelcomeNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWelcome"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageWelcome"
            android:layout_width="270dp"
            android:layout_height="290dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/welcome_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWelcomeNameApp"
            app:srcCompat="@drawable/imagewelcome" />

        <TextView
            android:id="@+id/messageWelcome"
            android:layout_width="235dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/message_welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageWelcome"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="289dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_black"
            android:text="@string/text_register"
            android:textColor="@color/light_blue"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageWelcome"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            app:layout_constraintVertical_bias="0.072"
            tools:ignore="SmallSp,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButtonLogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="-4dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/log_in"
            android:textColor="@color/intense_sky_blue"
            android:backgroundTint="@android:color/transparent"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toEndOf="@+id/textLogin"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            tools:ignore="MissingConstraints,SmallSp,TextContrastCheck"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>