<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/noteTitle"
            android:text="@string/note_title_card_view"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/noteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/note_description_card_view"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

        <ImageView
            android:id="@+id/moreOptions"
            android:src="@drawable/ic_baseline_more"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/more_button_content_description" />

    </LinearLayout>
</androidx.cardview.widget.CardView>